style.css
body {
  /*effects Navbar*/
    font-family: 'Gayathri', sans-serif;
}

h4 {
  margin-top: 30px;
  font-family: 'Gayathri', sans-serif;
}

#about {
  text-align: center;
}

.card-img {
  margin: 10px;
}

.container{
  margin-top: 65px;
  margin-bottom: 65px;
}

/* affects splash page big name */
.splash-card-body {
  /* margin: 10px; */
  color: rgb(175, 11, 131);
  background: transparent;
  font-family: 'Gayathri', sans-serif;
  text-align:center;
  border-style: double none double none;
  max-width: 740px; 
  margin: 250px auto 0px auto;
}

.card-body {
  /* margin: 10px; */
  color: rgb(175, 11, 131);
  background: transparent;
  font-family: 'Gayathri', sans-serif;
  text-align:center;
  border-style: double none double none;
  /* max-width: 740px;  */
}

.tag-line {
  font-size: 100px;
  color: antiquewhite;
}

.card-text {
  padding: 0%;
  font-size: 30px;
  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
  font-family: 'Gayathri', sans-serif;
    color: aliceblue;
}

/* .navbar-brand {
  color: #ec10c8;
} */

#nav-hover:hover {
color: red;
}

.card {
padding-top: 15px;
padding-bottom: 15px;
background-color: lavender;
} 

.description-text{
  font: black;
  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
  font-family: 'Gayathri', sans-serif;
}

footer a.s3d {
  margin: 10px;
}

/* for animated background */
canvas {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  margin: 0;
  cursor: none;
}

/* for animated background */
#game-wrapper {
  top: 0;
  z-index: -5;
  position: fixed;
}

.icon-right {
  float:right;
  margin-top: 8px;
}

/* ----------------------------------------- */

/* SOCIAL MEDIA BUTTONS */
/* body { background: #383838 } */

 #container {
  margin: 50px auto;
  width: 125px;
}

/* Base Style */
 a.s3d  {
  clear: both;
  opacity: .8;
  
  border-radius:3px;
  
  box-shadow:0 4px 5px rgba(0,0,0,.3);
  
  display: inline-block !important;
  /* font: 700 13px/36px 'Arial', Helvetica, Clean, sans-serif; */
  /* height: 18px; */
  font-size: 18px;
  margin: 0 0 10px;
  padding: 0 10px;
  position: relative;
  text-decoration: none;
  text-shadow: 0 1px 1px rgba(255,255,255,.35);
  width: 125px;
  
  transition: width 0.1s ease-in-out, opacity 0.1s ease-in-out, margin-left 0.1s ease-in-out, transform .3s ease-out;
}

a.s3d:hover {
  opacity: 1;
  width: 160px;
  margin-left: -10px;
}

/* a.s3d:active { transform: translateX(200px); } */

/* Dribbble */
 a.dribbble {
  background: #F98CB6;
  background: linear-gradient(#F98CB6, #F75F94);
  border-top: 1px solid #fbbad3;
  color: rgba(74,36,49,.9);
}

a.dribbble:active {
  background: #F75F94;
  background: linear-gradient(#F75F94, #F98CB6);
}

/* Twitter */
 a.twitter {
  background: #65acc8;
  background: linear-gradient(#65acc8, #4586ae);
  border-top: 1px solid #a1cdde;
  color: rgba(25,45,55,.9);
}

a.twitter:active {
  background: #4586ae;
  background: linear-gradient(#4586ae, #65acc8);
}

/* Facebook */
 a.facebook {
  background: #4669ab;
  background: linear-gradient(#4669ab, #304886);
  border-top: 1px solid #8ea4cd;
  color: rgba(21,31,53,1);
  text-shadow: 0 1px 1px rgba(255,255,255,.35);
}

a.facebook:active {
  background: #304886;
  background: linear-gradient(#304886, #4669ab);
}

/* Forrst */
 a.forrst {
  background: #58853e;
  background: linear-gradient(#58853e, #3c592a);
  border-top: 1px solid #99b489;
  color: rgba(22,33,16,1);
} 

 a.forrst:active {
  background: #3c592a;
  background: linear-gradient(#3c592a, #58853e);
}

/* Designmoo */
 a.designmoo {
  background: #eb5a5f;
  background: linear-gradient(#eb5a5f, #e13c41);
  border-top: 1px solid #f39a9e;
  color: rgba(69,22,24,1);
} 

a.designmoo:active {
  background: #e13c41;
  background: linear-gradient(#e13c41, #eb5a5f);
}  

/* Flickr */
 a.flickr {
  background: #ea66ac;
  background: linear-gradient(#ea66ac, #da3868);
  border-top: 1px solid #f3a2cd;
  color: rgba(74,4,32,1);
}

a.flickr:active {
  background: #da3868;
  background: linear-gradient(#da3868, #ea66ac);
} 
/* ... */

